# file-stats-mcp

./: .gitignore  LICENSE  PUBLISH_GUIDE.md  README.md  README_RELEASE.md  file_stats_agent.py  mcp.json  mcp_server.py  pyproject.toml  requirements.txt  test_client.py
